Setup User crud

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE='Asia/Jakarta'
+APP_URL=http://localhost:8000
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,8 +24,8 @@ DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=hcm_sync
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
